adjustments for submodules

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>UFI</title>
   <link rel="stylesheet" href="./main.css">
   <script type="module">
-    import { app } from './js/index.js'
+    import { app } from './js/app/index.js'
 
     try {
       document.addEventListener('DOMContentLoaded', app);
