--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,8 @@
     }
   </script>
 </head>
-<body></body>
+<body>
+  <ufi-slide-preload-container></ufi-slide-preload-container>
+  <ufi-layer-container></ufi-layer-container>
+</body>
 </html>
