--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,5 @@
     }
   </script>
 </head>
-<body>
-  <ufi-slide-preload-container></ufi-slide-preload-container>
-  <ufi-layer-container></ufi-layer-container>
-</body>
+<body></body>
 </html>
