add static assets folder

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     try {
       document.addEventListener('DOMContentLoaded', app);
     } catch (_) {
-      window.location.reload()
+      window.location.reload(true);
     }
   </script>
 </head>
