add webapp capable

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="manifest" href="manifest.json">
+  <meta name="apple-mobile-web-app-title" content="UFI">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>UFI</title>
   <link rel="stylesheet" href="./main.css">
   <script type="module">
@@ -16,5 +21,7 @@
     }
   </script>
 </head>
+
 <body></body>
+
 </html>
